@@ -55,7 +55,8 @@ int	 dbd_bind_ph  _((SV *sth, imp_sth_t *imp_sth,
 int	 dbd_db_login6 _((SV *dbh, imp_dbh_t *imp_dbh, char *dbname, char *user, char *pwd, SV *attr));
 int    dbd_describe _((SV *sth, imp_sth_t *imp_sth));
 ub4    ora_blob_read_piece _((SV *sth, imp_sth_t *imp_sth, imp_fbh_t *fbh, SV *dest_sv,
-                   long offset, long len, long destoffset));
-ub4    ora_blob_read_mb_piece _((SV *sth, imp_sth_t *imp_sth, imp_fbh_t *fbh, SV *dest_sv, long offset, long len, long destoffset));
+                   long offset, UV len, long destoffset));
+ub4    ora_blob_read_mb_piece _((SV *sth, imp_sth_t *imp_sth, imp_fbh_t *fbh, SV *dest_sv,
+		   long offset, UV len, long destoffset));
 
 /* end of Oracle.h */
